--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,10 @@
   "name": "blackpeter",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "ts-node-dev index.ts",
-    "build": ""
+    "start": "tsc && node dist/index.js",
+    "dev": "ts-node-dev src/index.ts --respawn"
   },
   "repository": {
     "type": "git",
