--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/peterhodges/blackpeter#readme",
   "dependencies": {
+    "socket.io": "^3.0.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   },
