--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "strict": true,
         "module": "commonjs",
         "esModuleInterop": true,
         "target": "es6",
@@ -15,6 +16,6 @@
         }
     },
     "include": [
-        "src/**/*"
+        "src/**/*",
     ]
 }
